@@ -1,2 +1,5 @@
+* Remove maintenance related fields
+* Hide milestones if no milestone group is defined.
+
 Version 3.4.0 - 2014-11-13
 * Initial release
